@@ -1,4 +1,5 @@
 Revision history for MooseX::Log::Log4perl
+    * RT#82888: Refactor to use Moo instead of Any::Moose (Alexander Hartmaier)
 
 0.46  Wed Jun 27 2012 (rl)
     * RT#77451: Spelling mistake in Easy.pm (thanks gregoa@debian.org)
@@ -14,7 +15,7 @@ Revision history for MooseX::Log::Log4perl
     * Fix wrong META.yml file
 
 0.43  Thu Aug 25 2011 (rl)
-    * Change to use Any::Moose to also support Mouse environemnt
+    * Change to use Any::Moose to also support Mouse environment
     * Documentation improvements for Any::Moose
 
 0.42  Thu Apr 29 2010 (again)
